Fix: Footer scrolling on mobile
Fix the footer to be fixed at the bottom of the page on mobile devices.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -229,11 +230,17 @@ h1, h2 {
 footer.creds {
   width: 100%;
   color: white;
-  position: absolute;
-  bottom: 0;
-  left: 0;
   display: flex;
 }
+
+.footer-fixed {
+  position: fixed !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  z-index: 40 !important;
+}
+
 .warface {
   background: url(https://warface.co.uk/assets/images/warface-logo-white.svg) no-repeat;
   width: 48px;
